gh-pages title updates

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>University of Adelaide, Linux Training Handouts</title>
+    <title>University of Adelaide, Introduction to Phoenix for Bioinformaticians Training Handouts</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Linux Training Handouts</h1>
+        <h1>Introduction to Phoenix for Bioinformaticians</h1>
         <p>This workshop is developed by Phoenix Team @ University of Adelaide. <br>
         Phoenix team acknolodges the tremendous contribution by Bioinformatics Hub @ University of Adeladie in developing this curriculum. <br>
         Phoenix team also thanks Bioplatforms Australia (BPA), CSIRO Bioinformatics Core and the EBI for providing handout templates.
