--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Introduction to Phoenix for Bioinformaticians</h1>
+        <h1>Introduction to Phoenix</h1>
         <p>This workshop is developed by Phoenix Team @ University of Adelaide. <br>
         Phoenix team acknolodges the tremendous contribution by Bioinformatics Hub @ University of Adeladie in developing this curriculum. <br>
         Phoenix team also thanks Bioplatforms Australia (BPA), CSIRO Bioinformatics Core and the EBI for providing handout templates.
