gh-pages header update

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ Handouts</title>
         <h1>Introduction to Phoenix</h1>
         <p>This workshop is developed by Phoenix Team @ University of Adelaide. <br>
         Introduction to Phoenix is a part of HPC curriculum developed and delivered by the Phoenix
-team @ The University of Adelaide. <br>
+team @ UofA. <br>
         Phoenix team thanks the coordination and supports offered by BioHub @ UofA in delivering this course.  
         </p>
         <p class="view"><a href="https://github.com/PhoenixHPC/Intro-Bash">View the Project Repo on
