--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@ Handouts</title>
 team @ UofA. <br>
         Phoenix team thanks the coordination and supports offered by BioHub @ UofA in delivering this course.  
         </p>
-        <p class="view"><a href="https://github.com/PhoenixHPC/Intro-Bash">View the Project Repo on
-GitHub<small>PhoenixHPC/Intro-Bash</small></a></p>
+        <p class="view"><a href="https://phoenixhpc.github.io/Intro-Phoenix/">View the Project Repo on
+GitHub<small>PhoenixHPC/Intro-Phoenix</small></a></p>
 
 
         <ul>
