--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@ GitHub<small>PhoenixHPC/Intro-Phoenix</small></a></p>
 
 
         <ul>
-          <li><a href="pdfs-latest/trainee_handout.pdf">Download <strong>Trainee
-PDF</strong></a></li>
-          <li><a href="pdfs-latest/trainer_handout.pdf">Download <strong>Trainer
-PDF</strong></a></li>
-          <li><a href="https://github.com/PhoenixHPC/Intro-Bash">View On
-<strong>GitHub</strong></a></li>
+          <li><a href="pdfs-latest/trainee_handout.pdf">View <strong>Presentation Slides
+</strong></a></li>
+          <li><a href="pdfs-latest/trainer_handout.pdf">Download <strong>Dataset
+</strong></a></li>
+          <li><a href="https://github.com/PhoenixHPC/Intro-Bash">Download <strong>SSH Client for Windows
+</strong></a></li>
         </ul>
       </header>
       <section>
