--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@ GitHub<small>PhoenixHPC/Intro-Phoenix</small></a></p>
 
 
         <ul>
-          <li><a href="pdfs-latest/trainee_handout.pdf">View <strong>Presentation Slides
+          <li><a href="pdfs-latest/trainee_handout.pdf">View <strong>Slides
 </strong></a></li>
           <li><a href="pdfs-latest/trainer_handout.pdf">Download <strong>Dataset
 </strong></a></li>
-          <li><a href="https://github.com/PhoenixHPC/Intro-Bash">Download <strong>SSH Client for Windows
+          <li><a href="https://github.com/PhoenixHPC/Intro-Bash">Download <strong>SSH Client
 </strong></a></li>
         </ul>
       </header>
