--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ GitHub<small>PhoenixHPC/Intro-Phoenix</small></a></p>
 </strong></a></li>
           <li><a href="pdfs-latest/trainer_handout.pdf">Download <strong>Dataset
 </strong></a></li>
-          <li><a href="https://github.com/PhoenixHPC/Intro-Bash">Download <strong>SSH Clients
+          <li><a href="https://www.dropbox.com/sh/ho0vat7wkvrwi17/AADZ3Iy-5otwg-vX9WP1ojSMa?dl=0">Download <strong>SSH Clients
 </strong></a></li>
         </ul>
       </header>
