--- a/index.html
+++ b/index.html
@@ -27,11 +27,14 @@ GitHub<small>PhoenixHPC/Intro-Phoenix</small></a></p>
 
 
         <ul>
-          <li><a href="pdfs-latest/trainee_handout.pdf">View <strong>Slides
+          <li><a href="pdfs-latest/trainee_handout.pdf">
+          View <strong>Slides
 </strong></a></li>
-          <li><a href="pdfs-latest/trainer_handout.pdf">Download <strong>Dataset
+          <li><a href="pdfs-latest/trainer_handout.pdf">
+          Download <strong>Dataset
 </strong></a></li>
-          <li><a href="https://www.dropbox.com/sh/ho0vat7wkvrwi17/AADZ3Iy-5otwg-vX9WP1ojSMa?dl=0">Download <strong>SSH Clients
+          <li><a href="https://www.dropbox.com/sh/ho0vat7wkvrwi17/AADZ3Iy-5otwg-vX9WP1ojSMa?dl=0">
+          Download <strong>SSH Clients
 </strong></a></li>
         </ul>
       </header>
