--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@ Handouts</title>
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    
+    <!-- Global Site Tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-105793922-2"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments)};
+	  gtag('js', new Date());
+
+	  gtag('config', 'UA-105793922-2');
+	</script>
+
   </head>
   <body>
     <div class="wrapper">
@@ -136,21 +147,6 @@ University of Adelaide</a></p>
 href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-
-    <script src="javascripts/scale.fix.js"></script>
-          <script type="text/javascript">
-            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." :
-"http://www.");
-            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js'
-type='text/javascript'%3E%3C/script%3E"));
-          </script>
-
-          <script type="text/javascript">
-            try {
-              var pageTracker = _gat._getTracker("UA-105793922-2");
-            pageTracker._trackPageview();
-            } catch(err) {}
-    </script>
 
   </body>
 </html>
