--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ Handouts</title>
 team @ UofA. <br>
         Phoenix team thanks the coordination and supports offered by BioHub @ UofA in delivering this course.  
         </p>
-        <p class="view"><a href="https://phoenixhpc.github.io/Intro-Phoenix/">View the Project Repo on
+        <p class="view"><a href="https://github.com/PhoenixHPC/Intro-Phoenix/">View the Project Repo on
 GitHub<small>PhoenixHPC/Intro-Phoenix</small></a></p>
 
 
@@ -73,14 +73,14 @@ class="octicon octicon-link"></span></a>Table of Contents</h1>
 <a id="homepage-and-pdfs" class="anchor" href="#homepage-and-pdfs" aria-hidden="true"><span
 class="octicon octicon-link"></span></a>Homepage and PDFs</h1>
 
-<p>You can access the source code and up-to-date PDFs from this project at
-<a href="https://github.com/PhoenixHPC/Intro-Bash">https://github.com/PhoenixHPC/Intro-Bash</a></p>
+<p>You can access the course slices, dataset and some updated information for this project at
+<a href="https://github.com/PhoenixHPC/Intro-Bash">https://github.com/PhoenixHPC/Intro-Phoenix/</a></p>
 
 <h1>
 <a id="workshop-feedback" class="anchor" href="#workshop-feedback" aria-hidden="true"><span
 class="octicon octicon-link"></span></a>Workshop Feedback</h1>
 <p> Phoenix Team @ UofA will be very appreciated if you can provide feedback on this workshop by
-fill in this survey at <a href="https://goo.gl/gqwQ1e">goo.gl/gqwQ1e</a></p>
+fill in this survey at <a href="https://goo.gl/gqwQ1e">https://goo.gl/32sFYf</a></p>
 
 
 <h1>
