--- a/index.html
+++ b/index.html
@@ -33,13 +33,12 @@ Handouts</title>
 team @ UofA. <br>
         Phoenix team thanks the coordination and supports offered by BioHub @ UofA in delivering this course.  
         </p>
-        <p class="view"><a href="https://github.com/PhoenixHPC/Intro-Phoenix/">View the Project Repo on
-GitHub<small>PhoenixHPC/Intro-Phoenix</small></a></p>
+        <p class="view"><a href="info/Intro-Phoenix-Workshop.md">View the workshop information<small>Introduction to Phoenix Info Sheet</small></a></p>
 
 
         <ul>
           <li><a href="pdfs-latest/trainee_handout.pdf">
-          View <strong>Slides
+          View <strong>Handout
 </strong></a></li>
           <li><a href="pdfs-latest/trainer_handout.pdf">
           Download <strong>Dataset
