--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ Handouts</title>
 team @ UofA. <br>
         Phoenix team thanks the coordination and supports offered by BioHub @ UofA in delivering this course.  
         </p>
-        <p class="view"><a href="info/Intro-Phoenix-Workshop.md">View the workshop information<small>Introduction to Phoenix Info Sheet</small></a></p>
+        <p class="view"><a href="info/Intro-Phoenix-Workshop.pdf">View the workshop information<small>Introduction to Phoenix Info Sheet</small></a></p>
 
 
         <ul>
