--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ team @ UofA. <br>
           <li><a href="pdfs-latest/trainee_handout.pdf">
           View <strong>Handout
 </strong></a></li>
-          <li><a href="data/intro_phoenix.zip">
+          <li><a href="data/Intro-Phoenix.zip">
           Download <strong>Dataset
 </strong></a></li>
           <li><a href="https://www.dropbox.com/sh/ho0vat7wkvrwi17/AADZ3Iy-5otwg-vX9WP1ojSMa?dl=0">
